--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -53,22 +53,21 @@ nginx_extra_http_options: ""
 #      proxy_set_header   Host $http_host;
 
 nginx_remove_default_vhost: false
-nginx_vhosts: []
-# Example vhost below, showing all available options:
-# - listen: "80" # default: "80"
-#   server_name: "example.com" # default: N/A
-#   root: "/var/www/example.com" # default: N/A
-#   index: "index.html index.htm" # default: "index.html index.htm"
-#   filename: "example.com.conf" # Can be used to set the filename of the vhost file.
-#
-#   # Properties that are only added if defined:
-#   server_name_redirect: "www.example.com" # default: N/A
-#   error_page: ""
-#   access_log: ""
-#   error_log: ""
-#   extra_parameters: "" # Can be used to add extra config blocks (multiline).
-#   template: "" # Can be used to override the `nginx_vhost_template` per host.
-#   state: "absent" # To remove the vhost configuration.
+nginx_vhosts:
+  - listen: "443" # default: "80"
+    server_name: "example.com" # default: N/A
+    root: "/var/www/example.com" # default: N/A
+    index: "index.html index.htm" # default: "index.html index.htm"
+    filename: "example.com.conf" # Can be used to set the filename of the vhost file.
+
+    # Properties that are only added if defined:
+    server_name_redirect: "www.example.com" # default: N/A
+    error_page: ""
+    access_log: ""
+    error_log: ""
+    extra_parameters: "" # Can be used to add extra config blocks (multiline).
+    template: "" # Can be used to override the `nginx_vhost_template` per host.
+    state: "absent" # To remove the vhost configuration.
 
 nginx_upstreams: []
 # - name: myapp1
