--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -52,22 +52,28 @@ nginx_extra_http_options: ""
 #      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 #      proxy_set_header   Host $http_host;
 
-nginx_remove_default_vhost: false
+nginx_remove_default_vhost: true
 nginx_vhosts:
-  - listen: "443" # default: "80"
+  - listen: "443 ssl http2" # default: "80"
     server_name: "example.com" # default: N/A
     root: "/var/www/example.com" # default: N/A
     index: "index.html index.htm" # default: "index.html index.htm"
-    filename: "example.com.conf" # Can be used to set the filename of the vhost file.
-
+    filename: "example.com.conf"
+    template: "vhost.j2"
+    state: "present" # To remove the vhost configuration.
     # Properties that are only added if defined:
-    server_name_redirect: "www.example.com" # default: N/A
-    error_page: ""
-    access_log: ""
-    error_log: ""
-    extra_parameters: "" # Can be used to add extra config blocks (multiline).
-    template: "" # Can be used to override the `nginx_vhost_template` per host.
-    state: "absent" # To remove the vhost configuration.
+    extra_parameters: |
+      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+      ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+      add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
+      ssl_ciphers ALL:!DH:!EXPORT:!RC4:+HIGH:+MEDIUM:!LOW:!aNULL:!eNULL;
+      ssl_session_cache shared:ssl_shared_cache_name:10m;
+
+  - listen: "80"
+    server_name: "example.com www.example.com"
+    return: "301 https://example.com$request_uri"
+    filename: "example.com.80.conf"
 
 nginx_upstreams: []
 # - name: myapp1
