common software fix, nginx ssl config commented out

--- a/roles/common-software/tasks/main.yml
+++ b/roles/common-software/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
-# tasks file for common-software
+- name: Install utils
+  apt: name={{item}} state=installed
+  with_items:
+  - vim
+  - htop
