fix #1 logstah install

--- a/site.yml
+++ b/site.yml
@@ -10,7 +10,7 @@
     # - nginx
     - role: geerlingguy.java
       java_packages:
-        - java-1.8.0-openjdk
+        - openjdk-8-jdk
     - geerlingguy.elasticsearch
     - geerlingguy.logstash
     - geerlingguy.filebeat
