remove unused plugins

--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -52,7 +52,7 @@ nginx_extra_http_options: ""
 #      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 #      proxy_set_header   Host $http_host;
 
-nginx_remove_default_vhost: true
+nginx_remove_default_vhost: false
 nginx_vhosts:
   # - listen: "443 ssl http2" # default: "80"
   #   server_name: "example.com" # default: N/A
