--- a/roles/geerlingguy.logstash/tasks/ssl.yml
+++ b/roles/geerlingguy.logstash/tasks/ssl.yml
@@ -11,7 +11,7 @@
     dest: "{{ logstash_ssl_dir }}/{{ item | basename }}"
     mode: 0644
   with_items:
-    - "{{ logstash_ssl_key_file }}"
-    - "{{ logstash_ssl_certificate_file }}"
+    - "{{ playbook_dir }}/{{ logstash_ssl_key_file }}"
+    - "{{ playbook_dir }}/{{ logstash_ssl_certificate_file }}"
   notify: restart logstash
   when: logstash_ssl_key_file
