fix errors in when section

--- a/roles/geerlingguy.filebeat/tasks/config.yml
+++ b/roles/geerlingguy.filebeat/tasks/config.yml
@@ -12,7 +12,7 @@
   file:
     path: "{{ filebeat_ssl_dir }}"
     state: directory
-  when: filebeat_ssl_key_file
+  when: filebeat_ssl_key_file != ""
 
 - name: Copy SSL key and cert for filebeat.
   copy:
@@ -23,4 +23,4 @@
     - "{{ playbook_dir }}/{{ filebeat_ssl_key_file }}"
     - "{{ playbook_dir }}/{{ filebeat_ssl_certificate_file }}"
   notify: restart filebeat
-  when: filebeat_ssl_key_file and filebeat_ssl_certificate_file
+  when: filebeat_ssl_key_file != "" and filebeat_ssl_certificate_file != ""
