--- a/roles/geerlingguy.filebeat/defaults/main.yml
+++ b/roles/geerlingguy.filebeat/defaults/main.yml
@@ -20,6 +20,6 @@ filebeat_log_dir: /var/log/mybeat
 filebeat_log_filename: mybeat.log
 
 filebeat_ssl_dir: /etc/pki/logstash
-filebeat_ssl_certificate_file: "rootCA"
-filebeat_ssl_key_file: "rootCA"
+filebeat_ssl_certificate_file: "rootCA.pem"
+filebeat_ssl_key_file: "rootCA.key"
 filebeat_ssl_insecure: "false"
