--- a/roles/geerlingguy.logstash/defaults/main.yml
+++ b/roles/geerlingguy.logstash/defaults/main.yml
@@ -8,8 +8,8 @@ logstash_local_syslog_path: /var/log/syslog
 logstash_monitor_local_syslog: true
 
 logstash_ssl_dir: /etc/pki/logstash
-logstash_ssl_certificate_file: "rootCA"
-logstash_ssl_key_file: "rootCA"
+logstash_ssl_certificate_file: "rootCA.pem"
+logstash_ssl_key_file: "rootCA.key"
 
 logstash_enabled_on_boot: yes
 
