--- a/roles/geerlingguy.logstash/defaults/main.yml
+++ b/roles/geerlingguy.logstash/defaults/main.yml
@@ -5,11 +5,12 @@ logstash_elasticsearch_hosts:
   - http://localhost:9200
 
 logstash_local_syslog_path: /var/log/syslog
-logstash_monitor_local_syslog: true
+logstash_monitor_local_syslog: false
 
 logstash_ssl_dir: /etc/pki/logstash
-logstash_ssl_certificate_file: "rootCA.pem"
-logstash_ssl_key_file: "rootCA.key"
+logstash_ssl_certificate_file: "logstash-forwarder.crt"
+logstash_ssl_key_file: "logstash-forwarder.key.pem"
+logstash_ssl_default_key_file: "logstash-forwarder.key"
 
 logstash_enabled_on_boot: yes
 
