--- a/roles/geerlingguy.logstash/defaults/main.yml
+++ b/roles/geerlingguy.logstash/defaults/main.yml
@@ -7,6 +7,7 @@ logstash_elasticsearch_hosts:
 logstash_local_syslog_path: /var/log/syslog
 logstash_monitor_local_syslog: false
 
+logstash_patterns_dir: /etc/logstash/patterns
 logstash_ssl_dir: /etc/pki/logstash
 logstash_ssl_certificate_file: "logstash-forwarder.crt"
 logstash_ssl_key_file: "logstash-forwarder.key.pem"
