--- a/roles/geerlingguy.logstash/files/filters/13-postgresql.conf
+++ b/roles/geerlingguy.logstash/files/filters/13-postgresql.conf
@@ -1,15 +1,25 @@
 filter {
-  if [fields][log_type] == "log4j" {
-    grok {
-      patterns_dir => ["/etc/logstash/patterns"]
-      match => { "message" => "%{TIMESTAMP_ISO8601:[log4j][timestamp]} %{LOGLEVEL:[log4j][level]} %{JAVACLASS:[log4j][java_class]} - %{GREEDYDATA:[log4j][message]}" }
+  if [fields][log_type] == "postgresql" {
+    csv {
+      columns => ["log_time", "user_name", "database_name", "process_id", "connection_from", "session_id", "session_line_num", "command_tag", "session_start_time", "virtual_transaction_id", "transaction_id", "error_severity", "sql_state_code", "sql_message", "detail", "hint", "internal_query", "internal_query_pos", "context", "query", "query_pos", "location"]
+      separator => ","
     }
     mutate {
       add_field => { "read_timestamp" => "%{@timestamp}" }
     }
     date {
-      match => ["[log4j][timestamp]", "yyyy-MM-dd HH:mm:ss"]
-      target => "@timestamp"
+      match => ["log_time", "YYYY-MM-dd HH:mm:ss.SSS z"]
+    }
+    grok {
+      match => ["sql_message", "duration: %{DATA:duration:int} ms"]
+      tag_on_failure => []
+      add_tag => "sql_message"
+    }
+
+    grok  {
+      match =>["sql_message", "statement: %{GREEDYDATA:statement}"]
+      tag_on_failure => []
+      add_tag => "slow_statement"
     }
   }
 }
